revert redundant changes